--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/script.js" defer></script>
+
+    <!-- Icons -->
+
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <title>AivanPort</title>
   </head>
   <body>
-    
+    <!-- header Design -->
 
+    <header class="header">
+      <a href="#" class="logo">Derock.</a>
+
+      <div class="bx bx-manu" id="menu-icon">
+        <i class='bx bx-menu'></i>
+      </div>
+
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
