--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#" class="logo">Derock.</a>
 
       <div class="bx bx-manu" id="menu-icon">
-        <i class='bx bx-menu'></i>
+        <i class="bx bx-menu"></i>
       </div>
 
       <nav class="navbar">
@@ -38,6 +38,27 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
+
+    <!-- home section design -->
+
+    <section class="home" id="home">
+      <div class="home-content">
+        <h1>Hi, I'm <span>Aivan Derock</span></h1>
+        <div class="text-animate">
+          <h3>Frontend Developer</h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia
+          explicabo vero accusamus libero, reprehenderit cum nisi similique,
+          laborum non aperiam aut dolore repellat. Facilis sint qui libero.
+        </p>
+
+        <div class="btn-box">
+          <a href="#" class="btn">Hire Me</a>
+          <a href="#" class="btn">Let's Talk</a>
+        </div>
+      </div>
+    </section>
 
     <script src="./js/script.js"></script>
   </body>
