--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
           <a href="#" class="btn">Let's Talk</a>
         </div>
       </div>
+
+      <div class="home-sci">
+        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+      </div>
+
+      <div class="home-imgHover">
+        
+      </div>
     </section>
 
     <script src="./js/script.js"></script>
