--- a/index.html
+++ b/index.html
@@ -65,8 +65,31 @@
         <a href="#"><i class="bx bxl-instagram"></i></a>
       </div>
 
-      <div class="home-imgHover">
-        
+      <div class="home-imgHover"></div>
+    </section>
+
+    <!-- about section design -->
+    <section class="about" id="about">
+      <h2 class="heading">About <span>Me</span></h2>
+
+      <div class="about-img">
+        <img src="./assets/about.jpg" alt="about" />
+        <span class="circle-spin"></span>
+      </div>
+
+      <div class="about-content">
+        <h3>Frontend Developer!</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt deserunt
+          qui atque, quos eos tempore? Culpa officia dicta, illo, sit dolorum
+          aut error cum ipsam ab eos odit doloremque. Nisi qui unde error
+          tempore adipisci quos corporis incidunt in? Eos quia labore expedita
+          pariatur laborum iure suscipit, quos aut minima!
+        </p>
+
+        <div class="btn-box btns">
+          <a href="#" class="btn">Read More</a>
+        </div>
       </div>
     </section>
 
