--- a/index.html
+++ b/index.html
@@ -93,6 +93,112 @@
       </div>
     </section>
 
+    <!-- education section design -->
+
+    <section class="education" id="education">
+      <h2 class="heading">My <span>Aivan</span></h2>
+
+      <div class="education-row">
+        <div class="education-column">
+          <h3 class="title">Education</h3>
+
+          <div class="education-box">
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2018
+                </div>
+                <h3>Master Degree - University</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                  saepe quisquam non distinctio architecto blanditiis similique
+                  placeat in accusantium eos.
+                </p>
+              </div>
+            </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2018 - 2019
+                </div>
+                <h3>Master Degree - University</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                  saepe quisquam non distinctio architecto blanditiis similique
+                  placeat in accusantium eos.
+                </p>
+              </div>
+            </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2019 - 2020
+                </div>
+                <h3>Master Degree - University</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                  saepe quisquam non distinctio architecto blanditiis similique
+                  placeat in accusantium eos.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="education-column">
+          <h3 class="title">Experience</h3>
+
+          <div class="education-box">
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2018
+                </div>
+                <h3>Web Developer - Company</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                  saepe quisquam non distinctio architecto blanditiis similique
+                  placeat in accusantium eos.
+                </p>
+              </div>
+            </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2018 - 2019
+                </div>
+                <h3>Web Developer - Company</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                  saepe quisquam non distinctio architecto blanditiis similique
+                  placeat in accusantium eos.
+                </p>
+              </div>
+            </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2019 - 2020
+                </div>
+                <h3>Web Developer - Company</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                  saepe quisquam non distinctio architecto blanditiis similique
+                  placeat in accusantium eos.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+
     <script src="./js/script.js"></script>
   </body>
 </html>
