--- a/index.html
+++ b/index.html
@@ -261,6 +261,10 @@
       </div>
     </section>
 
+    <!-- contact section design -->
+
+    
+
     <script src="./js/script.js"></script>
   </body>
 </html>
