--- a/index.html
+++ b/index.html
@@ -266,38 +266,40 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact Me!</h2>
 
-
-
       <form action="#">
         <div class="input-box">
           <div class="input-field">
-            <input type="text" placeholder="Full Name" required>
+            <input type="text" placeholder="Full Name" required />
             <span class="focus"></span>
           </div>
 
           <div class="input-field">
-            <input type="text" placeholder="Email Address" required>
+            <input type="text" placeholder="Email Address" required />
             <span class="focus"></span>
           </div>
         </div>
-
-
 
         <div class="input-box">
           <div class="input-field">
-            <input type="number" placeholder="Mobile Number" required>
+            <input type="number" placeholder="Mobile Number" required />
             <span class="focus"></span>
           </div>
 
           <div class="input-field">
-            <input type="text" placeholder="Email Subject" required>
+            <input type="text" placeholder="Email Subject" required />
             <span class="focus"></span>
           </div>
         </div>
 
-
         <div class="textarea-field">
-          <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Your Message"
+            required
+          ></textarea>
           <span class="focus"></span>
         </div>
 
@@ -306,6 +308,18 @@
         </div>
       </form>
     </section>
+
+    <!-- footer design -->
+
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Ivan | All Rights Reserved.</p>
+      </div>
+
+      <div class="footer-iconTop">
+        <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+      </div>
+    </footer>
 
     <script src="./js/script.js"></script>
   </body>
