--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <header class="header">
       <a href="#" class="logo">Derock.</a>
 
-      <div class="bx bx-manu" id="menu-icon">
-        <i class="bx bx-menu"></i>
-      </div>
+      <div class="bx bx-menu" id="menu-icon"></div>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -36,6 +34,8 @@
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
+
+        <span class="active-nav"></span>
       </nav>
     </header>
 
