--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
     <!-- header Design -->
 
     <header class="header">
-      <a href="#" class="logo">Derock.</a>
+      <a href="#" class="logo"
+        >Derock.<span class="animate" style="--i: 1"></span
+      ></a>
 
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <div class="bx bx-menu" id="menu-icon">
+        <span class="animate" style="--i: 2"></span>
+      </div>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -36,26 +40,33 @@
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
+        <span class="animate" style="--i: 2"></span>
       </nav>
     </header>
 
     <!-- home section design -->
 
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
       <div class="home-content">
-        <h1>Hi, I'm <span>Aivan Derock</span></h1>
+        <h1>
+          Hi, I'm <span>Aivan Derock</span
+          ><span class="animate" style="--i: 2"></span>
+        </h1>
         <div class="text-animate">
           <h3>Frontend Developer</h3>
+          <span class="animate" style="--i: 3"></span>
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia
           explicabo vero accusamus libero, reprehenderit cum nisi similique,
           laborum non aperiam aut dolore repellat. Facilis sint qui libero.
+          <span class="animate" style="--i: 4"></span>
         </p>
 
         <div class="btn-box">
           <a href="#" class="btn">Hire Me</a>
           <a href="#" class="btn">Let's Talk</a>
+          <span class="animate" style="--i: 5"></span>
         </div>
       </div>
 
@@ -63,32 +74,41 @@
         <a href="#"><i class="bx bxl-github"></i></a>
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-instagram"></i></a>
+        <span class="animate" style="--i: 6"></span>
       </div>
 
       <div class="home-imgHover"></div>
+      <span class="animate home-img" style="--i: 7"></span>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-      <h2 class="heading">About <span>Me</span></h2>
+      <h2 class="heading">
+        About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="about-img">
         <img src="./assets/about.jpg" alt="about" />
         <span class="circle-spin"></span>
+        <span class="animate scroll" style="--i: 2"></span>
       </div>
 
       <div class="about-content">
-        <h3>Frontend Developer!</h3>
+        <h3>
+          Frontend Developer!<span class="animate scroll" style="--i: 3"></span>
+        </h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt deserunt
           qui atque, quos eos tempore? Culpa officia dicta, illo, sit dolorum
           aut error cum ipsam ab eos odit doloremque. Nisi qui unde error
           tempore adipisci quos corporis incidunt in? Eos quia labore expedita
           pariatur laborum iure suscipit, quos aut minima!
+          <span class="animate scroll" style="--i: 4"></span>
         </p>
 
         <div class="btn-box btns">
           <a href="#" class="btn">Read More</a>
+          <span class="animate scroll" style="--i: 5"></span>
         </div>
       </div>
     </section>
@@ -96,11 +116,11 @@
     <!-- education section design -->
 
     <section class="education" id="education">
-      <h2 class="heading">My <span>Journey</span></h2>
+      <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
 
       <div class="education-row">
         <div class="education-column">
-          <h3 class="title">Education</h3>
+          <h3 class="title">Education<span class="animate scroll" style="--i:2;"></span>.</h3>
 
           <div class="education-box">
             <div class="education-content">
@@ -144,11 +164,13 @@
                 </p>
               </div>
             </div>
+
+            <span class="animate scroll" style="--i:3;"></span>
           </div>
         </div>
 
         <div class="education-column">
-          <h3 class="title">Experience</h3>
+          <h3 class="title">Experience<span class="animate scroll" style="--i:5;"></span></h3>
 
           <div class="education-box">
             <div class="education-content">
@@ -192,6 +214,8 @@
                 </p>
               </div>
             </div>
+
+            <span class="animate scroll" style="--i:6;"></span>
           </div>
         </div>
       </div>
