--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <title>AivanPort</title>
+    <title>Derock.</title>
   </head>
   <body>
     <!-- header Design -->
@@ -224,11 +224,11 @@
     <!-- skills section design -->
 
     <section class="skills" id="skills">
-      <h2 class="heading">My <span>Skills</span></h2>
+      <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
 
       <div class="skills-row">
         <div class="skills-column">
-          <h3 class="title">Coding Skills</h3>
+          <h3 class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -252,11 +252,12 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
+            <span class="animate scroll" style="--i:3;"></span>
           </div>
         </div>
 
         <div class="skills-column">
-          <h3 class="title">Professional Skills</h3>
+          <h3 class="title">Professional Skills <span class="animate scroll" style="--i:5;"></span></h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -280,6 +281,7 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
+            <span class="animate scroll" style="--i:6;"></span>
           </div>
         </div>
       </div>
@@ -288,7 +290,7 @@
     <!-- contact section design -->
 
     <section class="contact" id="contact">
-      <h2 class="heading">Contact Me!</h2>
+      <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
       <form action="#">
         <div class="input-box">
@@ -301,6 +303,7 @@
             <input type="text" placeholder="Email Address" required />
             <span class="focus"></span>
           </div>
+          <span class="animate scroll" style="--i:3;"></span>
         </div>
 
         <div class="input-box">
@@ -313,6 +316,7 @@
             <input type="text" placeholder="Email Subject" required />
             <span class="focus"></span>
           </div>
+          <span class="animate scroll" style="--i:5;"></span>
         </div>
 
         <div class="textarea-field">
@@ -325,10 +329,12 @@
             required
           ></textarea>
           <span class="focus"></span>
+          <span class="animate scroll" style="--i:7;"></span>
         </div>
 
         <div class="btn-box btns">
           <button type="submit" class="btn">Submit</button>
+          <span class="animate scroll" style="--i:9;"></span>
         </div>
       </form>
     </section>
@@ -338,10 +344,12 @@
     <footer class="footer">
       <div class="footer-text">
         <p>Copyright &copy; 2023 by Ivan | All Rights Reserved.</p>
+        <span class="animate scroll" style="--i:1;"></span>
       </div>
 
       <div class="footer-iconTop">
         <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+        <span class="animate scroll" style="--i:3;"></span>
       </div>
     </footer>
 
